run tests with openid off

--- a/test-core.ini
+++ b/test-core.ini
@@ -90,7 +90,7 @@ ckan.datastore.enabled = 1
 
 ckanext.stats.cache_enabled = 0
 
-openid_enabled = True
+openid_enabled = False
 
 ckan.datasets_per_page = 20
 
