[#2547] resource download test

--- a/test-core.ini
+++ b/test-core.ini
@@ -31,6 +31,9 @@ ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-ex
 ## Solr support
 solr_url = http://127.0.0.1:8983/solr
 
+# Filestore
+ckan.storage_path = /tmp
+
 ckan.auth.user_create_organizations = true
 ckan.auth.user_create_groups = true
 ckan.auth.create_user_via_api = false
